Modification du texte sur la partie Loisirs

--- a/loisirs.html
+++ b/loisirs.html
@@ -58,8 +58,8 @@
                 </article>
                 <article>
                     <h1 id="dessin">Dessin</h1><br />
-                    <p><a href="https://www.apple.com/fr/ipad-pro/"><img class="imageflottante" src="images/ipad_pro.png" alt="Les deux tailles d'iPad Pro." /></a>Depuis toujours, je n'ai jamais été bon en dessin. En juillet 2019, à l'occasion des grandes vacances, j'ai pris la décision de prendre ma revanche sur ce passé et de me lancer dans cet art. Souhaitant intégrer un peu d'informatique à mes créations, j'ai acheté un Apple Pencil pour pouvoir dessiner sur iPad Pro avec l'application Procreate.</p>
-                    <p>La chaîne YouTube de <a href="https://www.youtube.com/galshir">Gal Shir</a> constitue une source d'inspiration pour moi, car cette personne utilise exactement les mêmes outils et la même application dans ses vidéos. Je m'entraîne donc à reproduire ses dessins pour en apprendre plus, ce qui stimule également mon imagination.</p>
+                    <p><a href="https://www.apple.com/fr/ipad-pro/"><img class="imageflottante" src="images/ipad_pro.png" alt="Les deux tailles d'iPad Pro." /></a>Depuis toujours, je n'ai jamais été bon en dessin. En 2019, j'ai pris la décision de prendre ma revanche sur ce passé et de me lancer dans cet art. Souhaitant intégrer un peu d'informatique à mes créations, j'ai acheté un Apple Pencil pour pouvoir dessiner sur iPad avec l'application Procreate.</p>
+                    <p>La chaîne YouTube de <a href="https://www.youtube.com/galshir">Gal Shir</a> constitue une source d'inspiration pour moi, car cette personne utilise exactement les mêmes outils et la même application dans ses vidéos. Je m'entraîne donc à reproduire ses dessins pour m'améliorer, ce qui stimule également mon imagination.</p>
 
                 </article>
 
@@ -75,4 +75,6 @@
         </footer>
 
     </div> <!-- fin id="globale"-->
-</body></html>
+</body>
+
+</html>
