--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             <section id="sec1">
                 <div id="intro">
                     <h1> Bienvenue sur mon ePortfolio !</h1>
-                    <p>Je m'appelle Antoine Després, je suis un étudiant en DUT Informatique à l'<a href="https://www.iut.parisdescartes.fr/">IUT de Paris</a>. Vous trouverez ici toutes les informations dont vous aurez besoin sur moi.</p>
+                    <p>Je m'appelle Antoine Després, je suis étudiant en DUT Informatique à l'<a href="https://www.iut.parisdescartes.fr/">IUT de Paris</a>. Vous trouverez ici toutes les informations dont vous aurez besoin sur moi.</p>
                 </div>
 
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-3">
                             <h1>Expériences</h1>
-                            <p>Au-delà de mon stage de troisième, j'ai déjà eu l'occasion de suivre le quotidien des employés de Microsoft France le temps d'un été...</p>
+                            <p>J'ai réalisé mon stage de troisième à la Société Générale afin de découvrir l'intégration de l'informatique dans le secteur bancaire.</p>
                             <a class="btn btn-dark" href="experiences.html" role="button">En savoir plus</a>
                         </div>
                         <div class="col-lg-9"></div>
