Mise à jour texte footer

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
             <h1>© Antoine Després - Groupe 109 - 2019</h1>
             <hr />
             <p>N'hésitez pas à ma contacter via <a href="contact.html">ce formulaire</a> ou bien via <a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/">LinkedIn</a> ! <a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a></p>
-            <p>Cet ePorfolio a été réalisé à l'aide de l'éditeur de texte Brackets, en langage HTML5+CSS3.<br /> Bootstrap est un framework fourni sous licence MIT. La propriété des médias utilisés est celle de leurs auteurs respectifs.</p>
+            <p>Cet ePorfolio a été réalisé à l'aide de l'éditeur de texte Brackets.<br /> Bootstrap est un framework fourni sous licence MIT. La propriété des médias utilisés est celle de leurs auteurs respectifs.</p>
         </footer>
     </div> <!-- fin id="globale"-->
 </body></html>
