--- a/competences.html
+++ b/competences.html
@@ -121,7 +121,7 @@
         </div> <!-- fin id="page"-->
 
         <footer>
-            <h1>© Antoine Després - Groupe 109 - 2019</h1>
+            <h1>© Antoine Després - 2020</h1>
             <hr />
             <p>N'hésitez pas à ma contacter via <a href="contact.html">ce formulaire</a> ou bien via <a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/">LinkedIn</a> ! <a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a></p>
             <p>Cet ePorfolio a été réalisé à l'aide de l'éditeur de texte Brackets.<br /> Bootstrap est un framework fourni sous licence MIT. La propriété des médias utilisés est celle de leurs auteurs respectifs.</p>
