--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div> <!-- fin id="page"-->
 
         <footer>
-            <h1>© Antoine Després - Groupe 109 - 2019</h1>
+            <h1>© Antoine Després - 2020</h1>
             <hr />
             <p>N'hésitez pas à ma contacter via <a href="contact.html">ce formulaire</a> ou bien via <a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/">LinkedIn</a> ! <a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a>
             </p>
