--- a/competences.html
+++ b/competences.html
@@ -68,7 +68,7 @@
                     <p><img class="imageflottante" src="images/planet.png" alt="Notre chère planète !" />Au cours de ma vie, j'ai eu l'occasion d'apprendre plusieurs langues, que ce soit à l'école ou en dehors par envie personnelle. Voici un tableau dans lequel figure mon niveau de maîtrise de chacune d'entre elles ainsi que d'autres informations telles que la durée d'apprentissage.</p><br />
 
                     <table>
-                        <caption>Dernière mise à jour : décembre 2019.</caption>
+                        <caption>Dernière mise à jour : janvier 2020.</caption>
 
                         <thead>
                             <!-- En-tête du tableau -->
@@ -99,18 +99,6 @@
                                 <td>B2</td>
                                 <td>2012</td>
                                 <td>DELE B2</td>
-                            </tr>
-                            <tr>
-                                <td>Corse</td>
-                                <td>A1</td>
-                                <td>2016</td>
-                                <td>Non</td>
-                            </tr>
-                            <tr>
-                                <td>Chinois</td>
-                                <td>A1</td>
-                                <td>2019</td>
-                                <td>Non</td>
                             </tr>
                         </tbody>
                     </table>
