--- a/competences.html
+++ b/competences.html
@@ -92,13 +92,13 @@
                                 <td>Anglais</td>
                                 <td>B2</td>
                                 <td>2008</td>
-                                <td>B2 First</td>
+                                <td>B2 First (bac)</td>
                             </tr>
                             <tr>
                                 <td>Espagnol</td>
                                 <td>B2</td>
                                 <td>2012</td>
-                                <td>DELE B2</td>
+                                <td>Non (bac)</td>
                             </tr>
                         </tbody>
                     </table>
