Mise à jour des textes et de l'en-tête / pied de page

--- a/competences.html
+++ b/competences.html
@@ -47,15 +47,15 @@
 
                 <article>
                     <h1 id="programmation">Programmation</h1><br />
-                    <p><a href="https://arduino.cc"><img class="imageflottante" src="images/Logo-Arduino.png" alt="Le logo Arduino." /></a>J'ai commencé la programmation au lycée avec les cours de Sciences de l'Ingénieur (SI) en première. Nous utilisions des cartes programmables de type Arduino Uno qui nous permettaient de concevoir de petits circuits électroniques (chenillard LED, petits moteurs, buzzer, capteur de distance). L'un de nos projets consistait en la reproduction du système d'information voyageur des rames de métro parisien : nous avons associé des mesures de distances recueillies par un capteur à une position d'une rame sur la ligne. Ainsi, il nous était possible de programmer l'allumage, l'extinction ou encore le clignotement de chaque diode en fonction de la position de la rame.</p>
-                    <p>Le langage Arduino est une version dérivée du langage C, que j'ai retrouvé en première année de DUT Informatique en cours d'IAP (Introduction à l'Algorithmique et à la Programmation), ce qui m'a donné une certaine avance dans la compréhension des fondamentaux du code. J'ai ensuite découvert le langage C++ qui élargit les possibilités de programmation, et j'ai décidé d'apprendre le langage Python sur mon temps libre.</p>
-                    <p>J'ai également des bases en langage HTML et CSS, ce qui me permet de réaliser le site que vous lisez actuellement.</p>
+                    <p><a href="https://arduino.cc"><img class="imageflottante" src="images/Logo-Arduino.png" alt="Le logo Arduino." /></a>J'ai commencé la programmation dès le lycée avec les cours de sciences de l'ingénieur. Nous utilisions des cartes programmables de type Arduino Uno qui nous permettaient de concevoir de petits circuits électroniques (chenillard LED, servomoteurs, capteurs de distance). L'un de nos projets consistait en la reproduction du système d'information voyageur des rames de métro parisien : nous avons associé des mesures de distances recueillies par un capteur à une position d'une rame sur la ligne. Ainsi, il nous était possible de programmer l'allumage, l'extinction ou encore le clignotement de chaque diode en fonction de la position de la rame.</p>
+                    <p>Le langage Arduino est une version dérivée du langage C, que j'ai retrouvé en première année de DUT Informatique accompagné de son évolution C++, ce qui m'a donné une certaine avance dans la compréhension des fondamentaux du code. J'apprends actuellement la programmation orientée objet en Java, et cela me plait beaucoup.</p>
+                    <p>J'ai également des bases en langage HTML et CSS, ce qui m'a permis de concevoir le site sur lequel vous naviguez actuellement.</p>
                 </article>
 
                 <article>
                     <h1 id="mathematiques">Mathématiques</h1><br />
                     <p><img class="imageflottante" src="images/pi.png" F alt="Le nombre Pi, fascinant !" />Mon cursus scolaire m'a transmis de nombreuses connaissances en mathématiques et en logique. Je maîtrise de nombreux outils mathématiques tels que la trigonométrie, les nombres complexes, le calcul matriciel, différentiel ou encore intégral.</p>
-                    <p>J'étudie la logique depuis 2017, ce qui me donne une certaine aisance en matière de raisonnement. Je maîtrise les opérateurs fondamentaux.</p>
+                    <p>J'étudie la logique depuis 2017, ce qui me donne une certaine aisance en matière de raisonnement. J'ai également des notions en théorie des graphes.</p>
 
                 </article>
                 <article>
@@ -75,7 +75,7 @@
                             <tr>
                                 <th>Langue</th>
                                 <th>Niveau CECRL</th>
-                                <th>Premiers mots</th>
+                                <th>Début</th>
                                 <th>Certification</th>
                             </tr>
                         </thead>
@@ -92,7 +92,7 @@
                                 <td>Anglais</td>
                                 <td>B2</td>
                                 <td>2008</td>
-                                <td>B2 First (bac)</td>
+                                <td>B2 First</td>
                             </tr>
                             <tr>
                                 <td>Espagnol</td>
