--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 
     <div id="globale">
         <header>
-            <h1><a href="index.html">Antoine Després</a></h1>
-            <h2>Étudiant à l'IUT de Paris</h2>
+            <div id="nomTexte">
+                <h1><a href="index.html">Antoine Després</a></h1>
+                <h2>Étudiant à l'IUT de Paris</h2>
+            </div>
+
             <hr />
 
             <nav>
@@ -81,10 +84,8 @@
 
         <footer>
             <h1>© Antoine Després - 2020</h1>
-            <hr />
-            <p>N'hésitez pas à ma contacter via <a href="contact.html">ce formulaire</a> ou bien via <a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/">LinkedIn</a> ! <a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a>
-            </p>
-            <p>Cet ePorfolio a été réalisé à l'aide de l'éditeur de texte Brackets.<br /> Bootstrap est un framework fourni sous licence MIT. La propriété des médias utilisés est celle de leurs auteurs respectifs.</p>
+            <hr/>
+            <p>N'hésitez pas à ma contacter via <a href="contact.html">ce formulaire</a> ou bien via <a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/">LinkedIn</a> ! <a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br/>Cet ePorfolio a été réalisé à l'aide de l'éditeur de texte Brackets.<br /> Bootstrap est un framework fourni sous licence MIT. La propriété des médias utilisés est celle de leurs auteurs respectifs.</p>
         </footer>
     </div> <!-- fin id="globale"-->
 </body></html>
