Revert "Update contact.html"
This reverts commit 008e2eb33be120d63db9520fc6e74012c7db49d5.

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
                     <textarea class="form-control" id="messageBox" rows="5"></textarea>
                 </div>
                 <br />
-                <button type="submit" class="btn btn-primary" disabled>(Envoi indisponible)</button>
+                <button type="submit" class="btn btn-primary">Envoyer</button>
             </form>
         </div> <!-- fin id="page"-->
 
