Updated Bootstrap and legal

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
             <section id="sec1">
                 <div id="intro">
                     <h1> Bienvenue sur mon ePortfolio !</h1>
-                    <p>Je m'appelle Antoine Després, je suis étudiant en DUT Informatique à l'<a href="https://www.iut.parisdescartes.fr/">IUT de Paris</a>. Vous trouverez ici toutes les informations dont vous aurez besoin sur moi.</p>
+                    <p>Je m'appelle Antoine Després, je suis étudiant première année de DUT Informatique à l'<a href="https://www.iut.parisdescartes.fr/">IUT de Paris</a>. Je suis actuellement à la recherche d'une entreprise pour réaliser ma deuxième année de formation en apprentissage.<br>Vous trouverez ici toutes les informations dont vous aurez besoin sur moi.</p>
                 </div>
 
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-3">
                             <h1>Expériences</h1>
-                            <p>J'ai réalisé mon stage de troisième à la Société Générale afin de découvrir l'intégration de l'informatique dans le secteur bancaire.</p>
+                            <p>J'ai réalisé mon stage de troisième à la Société Générale. Ce dernier m'a permis d'observer l'intégration des logiciels et de l'informatique en général dans le secteur bancaire.</p>
                             <a class="btn btn-dark" href="experiences.html" role="button">En savoir plus</a>
                         </div>
                         <div class="col-lg-9"></div>
@@ -64,14 +64,14 @@
                         <div class="col-lg-7"><a href="competences.html"><img class="grandebanniere" src="images/banniere_langages.png" alt="Voici quelques langages que je maîtrise !" /></a></div>
                         <div class="col-lg-5">
                             <h1>Compétences</h1>
-                            <p>Ma formation en <a href="https://www.iut.parisdescartes.fr/informatique/">DUT Informatique</a> me permet d'acquérir des compétences en programmation. J'ai aujourd'hui des bases solides en C/C++ et j'apprends le langage Python en parallèle, mais ce n'est pas tout !</p>
+                            <p>Ma formation en <a href="https://www.iut.parisdescartes.fr/informatique/">DUT Informatique</a> me permet de maîtriser les bases des principaux langages de programmation, à savoir C, C++, Java et Python. Je m'intéresse également au langage Swift en dehors des cours.</p>
                             <a class="btn btn-dark" href="competences.html" role="button">En savoir plus</a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-4">
                             <h1>Loisirs</h1>
-                            <p>En dehors des cours, je m'adonne à la création de montages électroniques à l'aide de cartes <a href="http://arduino.cc">Arduino</a> ainsi qu'à la photographie, et occasionnellement au dessin.</p>
+                            <p>En dehors des cours, je m'adonne au dessin et à la photographie, et plus occasionnellement à la création de montages électroniques à l'aide de cartes <a href="http://arduino.cc">Arduino</a>.</p>
                             <a class="btn btn-dark" href="loisirs.html" role="button">En savoir plus</a>
                         </div>
                         <div class="col-lg-8"><a href="loisirs.html"><img class="grandebanniere" src="images/banniere_loisirs.png" alt="Le logo Arduino, une carte Arduino UNO R3 et le logo d'Instagram." /></a></div>
@@ -83,9 +83,9 @@
         </div> <!-- fin id="page"-->
 
         <footer>
-            <h1>© Antoine Després - 2020</h1>
-            <hr/>
-            <p>N'hésitez pas à ma contacter via <a href="contact.html">ce formulaire</a> ou bien via <a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/">LinkedIn</a> ! <a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br/>Cet ePorfolio a été réalisé à l'aide de l'éditeur de texte Brackets.<br /> Bootstrap est un framework fourni sous licence MIT. La propriété des médias utilisés est celle de leurs auteurs respectifs.</p>
+            <h1>Antoine Després - 2020</h1>
+            <hr />
+            <p><a href="contact.html">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="legal.html">Mentions légales</a><br></p>
         </footer>
     </div> <!-- fin id="globale"-->
 </body></html>
