--- a/legal.html
+++ b/legal.html
@@ -1,8 +1,7 @@
-<!DOCTYPE HTML>
 <html lang="fr">
 
 <head>
-    <title>Contact - ePortfolio AD</title>
+    <title>Mentions légales - ePortfolio AD</title>
     <meta charset="utf-8" />
     <!-- Informations spécifiques aux mobiles -->
     <meta name="HandheldFriendly" content="true" />
@@ -42,45 +41,19 @@
         </header>
 
         <div id="page">
-            <form>
-                <legend>Formulaire de contact</legend>
-                <div class="form-row">
+            <section id="sec1">
+                <br>
+                <article>
+                    <h1>Mentions légales</h1><br />
+                    <p><br>Porfolio réalisé à l'aide de l'éditeur de texte <a href="http://brackets.io/">Brackets</a>.<br />
+                        <a href="https://getbootstrap.com/">Bootstrap</a> est un framework fourni sous licence <a href="https://opensource.org/licenses/MIT">MIT</a>.<br>
+                        Tous les noms de produits, logos et marques sont la propriété de leurs détenteurs respectifs.<br>
+                        Tous les noms d'entreprises, de produits et de services mentionnés sur ce site Internet le sont à des fins d'identification uniquement. <br>
+                        La mention de ces noms, logos et marques ne saurait constituer une recommandation d'utilisation.</p>
+                </article>
 
-                    <div class="form-group col-md-6">
-                        <label for="inputEmail4">Prénom</label>
-                        <input type="text" class="form-control" id="inputFirstName" placeholder="Votre prénom">
-                    </div>
-                    <div class="form-group col-md-6">
-                        <label for="inputEmail4">Nom</label>
-                        <input type="text" class="form-control" id="inputEmail4" placeholder="Votre nom">
-                    </div>
+            </section>
 
-                </div>
-
-                <div class="form-group">
-                    <label for="inputAddress">Adresse email</label>
-                    <input type="email" class="form-control" id="inputAddress" placeholder="email@example.com">
-                </div>
-
-                <div class="form-group">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">Je suis recruteur</label>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="inputCity">Date de contact souhaitée (n'entrez pas une date dans le passé, je ne suis pas Marty McFly !)</label>
-                        <input type="date" class="form-control" id="inputDate">
-                    </div>
-                </div>
-                <div class="form-row">
-                    <label for="exampleFormControlTextarea1">Votre message</label>
-                    <textarea class="form-control" id="messageBox" rows="5"></textarea>
-                </div>
-                <br />
-                <button type="submit" class="btn btn-primary">Envoyer</button>
-            </form>
         </div> <!-- fin id="page"-->
 
                 <footer>
@@ -88,5 +61,6 @@
             <hr />
             <p><a href="contact.html">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="legal.html">Mentions légales</a><br></p>
         </footer>
+
     </div> <!-- fin id="globale"-->
 </body></html>
