--- a/competences.html
+++ b/competences.html
@@ -100,6 +100,12 @@
                                 <td>2012</td>
                                 <td>Non (bac)</td>
                             </tr>
+                            <tr>
+                                <td>Italien</td>
+                                <td>A1</td>
+                                <td>2020</td>
+                                <td>Non</td>
+                            </tr>
                         </tbody>
                     </table>
                 </article>
