--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
             <script type="text/javascript" src="./jquery.serializeObject.min.js"></script>
 
             <script type="text/javascript">
-                var $form = $('formContact'),
+                var $form = $('form#formContact'),
                     url = 'https://script.google.com/macros/s/AKfycbwFPa9m5hRzEwvPc3F8sIh_Ib4tvgKeJBLtyIcEvCn_GfHozsk/exec';
 
                 $('#submit-form').on('click', function(e) {
@@ -98,6 +98,7 @@
                         // do something
                     });
                 });
+
             </script>
 
         </div> <!-- fin id="page"-->
@@ -108,4 +109,6 @@
             <p><a href="contact.html">Contact</a><br><a href="https://www.linkedin.com/in/antoine-despr%C3%A9s-89614718b/"><img src="images/linkedin_icon.png" alt="Connectons-nous sur LinkedIn !" /></a><br /> <a href="legal.html">Mentions légales</a><br></p>
         </footer>
     </div> <!-- fin id="globale"-->
-</body></html>
+</body>
+
+</html>
