--- a/competences.html
+++ b/competences.html
@@ -1,7 +1,7 @@
 <html lang="fr">
 
 <head>
-    <title> Compétences - ePortfolio AD</title>
+    <title> Compétences - Portfolio AD</title>
     <meta charset="utf-8" />
     <!-- Informations spécifiques aux mobiles -->
     <meta name="HandheldFriendly" content="true" />
