--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Contact - ePortfolio AD</title>
+    <title>Contact - Portfolio AD</title>
     <meta charset="utf-8" />
     <!-- Informations spécifiques aux mobiles -->
     <meta name="HandheldFriendly" content="true" />
