--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title> Antoine Després - ePortfolio </title>
+    <title> Antoine Després - Portfolio </title>
     <meta charset="utf-8" />
     <!-- Informations spécifiques aux mobiles -->
     <meta name="HandheldFriendly" content="true" />
@@ -47,7 +47,7 @@
         <div id="page">
             <section id="sec1">
                 <div id="intro">
-                    <h1> Bienvenue sur mon ePortfolio !</h1>
+                    <h1> Bienvenue sur mon Portfolio !</h1>
                     <p>Je m'appelle Antoine Després, je suis étudiant première année de DUT Informatique à l'<a href="https://www.iut.parisdescartes.fr/">IUT de Paris</a>. Je suis actuellement à la recherche d'une entreprise pour réaliser ma deuxième année de formation en apprentissage.<br>Vous trouverez ici toutes les informations dont vous aurez besoin sur moi.</p>
                 </div>
 
