--- a/legal.html
+++ b/legal.html
@@ -1,7 +1,7 @@
 <html lang="fr">
 
 <head>
-    <title>Mentions légales - ePortfolio AD</title>
+    <title>Mentions légales - Portfolio AD</title>
     <meta charset="utf-8" />
     <!-- Informations spécifiques aux mobiles -->
     <meta name="HandheldFriendly" content="true" />
