--- a/loisirs.html
+++ b/loisirs.html
@@ -1,7 +1,7 @@
 <html lang="fr">
 
 <head>
-    <title>Loisirs - ePortfolio AD</title>
+    <title>Loisirs - Portfolio AD</title>
     <meta charset="utf-8" />
     <!-- Informations spécifiques aux mobiles -->
     <meta name="HandheldFriendly" content="true" />
