--- a/experiences.html
+++ b/experiences.html
@@ -1,7 +1,7 @@
 <html lang="fr">
 
 <head>
-    <title>Expériences - ePortfolio AD</title>
+    <title>Expériences - Portfolio AD</title>
     <meta charset="utf-8" />
     <!-- Informations spécifiques aux mobiles -->
     <meta name="HandheldFriendly" content="true" />
